--- a/src/App.scss
+++ b/src/App.scss
@@ -18,45 +18,100 @@ body{
     @include title2();
 }
 
-.swiper{
-    position: static;
-    &-button{ 
-        &-prev, &-next{
-            width: 54px;
-            height: 54px;
-            background: $green;
-            position: absolute;
-            border-radius: 100%;
-            &::after{
-                content: url('data:image/svg+xml; utf8, <svg width="16" height="30" viewBox="0 0 16 30" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.84961 28.1998L12.7163 17.3331C13.9996 16.0498 13.9996 13.9498 12.7163 12.6665L1.84961 1.7998" stroke="white" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/></svg>');
-                position: relative;
-            }
-        }
+.header{
+    position: relative;
+    background: linear-gradient(90deg, rgba(59,65,60,1) 50%, rgba(148,209,190,1) 50%);
 
-        &-prev{
-            left: -90px;
-            &::after{
-                transform: rotate(180deg);
-                left: -2px;
-                top: 2px;
-            }
-        }
-
-        &-next{
-            right: -90px;
-            &::after{
-                right: -2px;
-            }
-        }
+    &__wrapper{
+        height: calc(100vh - 75px);
+        color: $white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
-    &-scrollbar{
-        bottom: -40px !important;
-        background-color: $light-green;
-        cursor: pointer;
+    &__content{
+        width: 40%;
+    }
 
-        &-drag{
-            background-color: $green;
+    &__title{
+        @include title();
+        margin: 0;
+    }
+
+    &__text{
+        @include text(28px, 400, 48px);
+        margin: 50px 0;
+    }
+
+    &__img{
+        position: absolute;
+        width: 45%;
+        right: 3%;
+        height: auto;
+    }
+
+    &__shop{
+        @include button();
+    }
+}
+.sale, .recommend{
+    .swiper{
+        position: static;
+
+        &-slide{
+            background-color: #fff;
+            display: block;
+            border-radius: 10px;
+            Link{
+                display:flex !important;
+            }
+        
+            .product{
+                &__img{
+                    width: 100%;
+                }
+            }
+        }
+
+        &-button{ 
+            &-prev, &-next{
+                width: 54px;
+                height: 54px;
+                background: $green;
+                position: absolute;
+                border-radius: 100%;
+                &::after{
+                    content: url('data:image/svg+xml; utf8, <svg width="16" height="30" viewBox="0 0 16 30" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.84961 28.1998L12.7163 17.3331C13.9996 16.0498 13.9996 13.9498 12.7163 12.6665L1.84961 1.7998" stroke="white" stroke-width="3" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+                    position: relative;
+                }
+            }
+
+            &-prev{
+                left: -90px;
+                &::after{
+                    transform: rotate(180deg);
+                    left: -2px;
+                    top: 2px;
+                }
+            }
+
+            &-next{
+                right: -90px;
+                &::after{
+                    right: -2px;
+                }
+            }
+        }
+
+        &-scrollbar{
+            bottom: -40px !important;
+            background-color: $light-green;
+            cursor: pointer;
+
+            &-drag{
+                background-color: $green;
+            }
         }
     }
 }
