--- a/src/variable.scss
+++ b/src/variable.scss
@@ -38,6 +38,7 @@ $red: #A51111;
     padding: 15px 0;
     width: 50%;
     text-align: center;
+    outline: none;
     cursor: pointer;
 
     &:hover{
