An overview of popular and discounted products has been created. The data output of a specific product in its card and the output of comments to it have been created

--- a/src/components/Product/product.scss
+++ b/src/components/Product/product.scss
@@ -36,8 +36,10 @@
     }
 
     &__name{
-        @include simpleText();
-        margin-top: 15px;
+        &_simple{
+            @include simpleText();
+            margin-top: 15px;
+        }
     }
     &__brand{
         @include simpleText();
