--- a/src/components/ProductMin/product.scss
+++ b/src/components/ProductMin/product.scss
@@ -1,8 +1,8 @@
 @import '../../variable.scss';
 
 .product{
-    &__img{
-        width: 200px;
+    &__img-small{
+        width: 160px;
         height: auto;
         border-radius: 10px;
     }
