--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -5,9 +5,9 @@
 
     &__products{
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         flex-wrap: wrap;
-        gap: 20px 0;
+        gap: 20px 20px;
         margin-top: 50px;
     }
 
@@ -81,5 +81,58 @@
 .gmap_iframe {
     height:400px;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 1200px){
+    .popular{
+        .product{
+            width: 23%;
+        }
+    } 
+}
+
+@media screen and (max-width: 991px){
+    .popular{
+        .product{
+            width: 30%;
+        }
+    } 
+}
+
+@media screen and (max-width: 676px){
+    .popular{
+        .product{
+            width: 40%;
+        }
+    } 
+
+    .location{
+        &__wrapper{
+            display: block;
+        }
+        &__content{
+            width: 100%;
+        }
+    }
+
+    .mapouter{
+        width:100%;
+        margin-bottom: 50px;
+    }
+}
+
+@media screen and (max-width: 550px){
+    .popular{
+        .product{
+            width: 45%;
+        }
+    } 
+}
+@media screen and (max-width: 450px){
+    .popular{
+        .product{
+            width: 75%;
+        }
+    } 
 }
 
