--- a/src/variable.scss
+++ b/src/variable.scss
@@ -14,16 +14,40 @@ $red: #A51111;
 
 @mixin title(){
     @include text(60px, 700, 90px);
+    @media screen and (max-width: 1140px){
+        @include text(50px, 700, 70px);
+    }
+    @media screen and (max-width: 991px){
+        @include text(40px, 700, 65px);
+    }
+    @media screen and (max-width: 676px){
+        @include text(35px, 700, 50px);
+    }
 }
 
 @mixin title2(){
     @include text(32px, 500, 54px);
     margin: 0;
+
+    @media screen and (max-width: 1140px){
+        @include text(30px, 500, 50px);
+    }
+
+    @media screen and (max-width: 991px){
+        @include text(28px, 500, 40px);
+    }
+    @media screen and (max-width: 676px){
+        @include text(24px, 500, 30px);
+    }
 }
 
 @mixin simpleText(){
     @include text(20px, 400, 33px);
     margin: 0;
+
+    @media screen and (max-width: 991px){
+        @include text(18px, 400, 28px);
+    }
 }
 
 @mixin button(){
@@ -44,4 +68,9 @@ $red: #A51111;
     &:hover{
         background-color: darken($gray, 10%);
     }
+
+    @media screen and (max-width: 676px){
+        @include text(18px, 400, 28px);
+    }
 }
+
