The final version of the project (created adaptive and corrected shortcomings)

--- a/src/App.scss
+++ b/src/App.scss
@@ -188,29 +188,30 @@ body{
     }
 }
 
-@media screen and (max-width: 676px){
+@media screen and (max-width: 760px){
     .header{
         position: relative;
         background: linear-gradient(rgba(59,65,60,1) 50%, rgba(148,209,190,1) 50%);
 
         &__wrapper{
-            
             height: auto;
             color: $white;
             display: block;
+            padding-bottom: 30px;
         }
 
         &__content{
-            padding: 100px 0;
+            padding: 100px 0 20px 0;
             width: 100%;
             text-align: center;
         }
 
         &__img{
             position: static;
-            width: 80%;
+            width: 70%;
             height: auto;
-            margin: 50px 0;
+            margin: 50px auto;
+            display: block;
         }
 
         &__text{
@@ -219,7 +220,46 @@ body{
         }
 
         &__shop{
-            width: 100%;
+            width: 60%;
+        }
+    }
+
+    .sale, .recommend, .account{
+        .swiper{
+            &-button{ 
+                &-prev, &-next{
+                    width: 40px;
+                    height: 40px;
+                }
+
+                &-prev{
+                    left: -90px;
+                    &::after{
+                        transform: rotate(180deg);
+                        left: -2px;
+                        top: 2px;
+                    }
+                }
+
+                &-next{
+                    right: -90px;
+                    &::after{
+                        right: -2px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 450px){
+    .sale, .reccomend{
+        .swiper{
+            &-button{
+                &-prev, &-next{
+                    display: none;
+                }
+            }
         }
     }
 }
