--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -133,6 +133,12 @@
         .product{
             width: 75%;
         }
-    } 
+    }
+    
+    .sale{
+        &__wrapper{
+            width: 100%;
+        }
+    }
 }
 
