--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -106,3 +106,11 @@
         }
     }
 }
+
+@media screen and (max-width: 400px){
+    .footer{
+        &__data{
+            width: 100%;
+        }
+    }
+}
