--- a/src/pages/Account/account.scss
+++ b/src/pages/Account/account.scss
@@ -101,3 +101,111 @@
         } 
     }
 }
+
+@media screen and (max-width: 1000px){
+    .account{
+        &__menu{
+            width: 30%;
+        }
+
+        &__item{
+            width: 90%;
+        }
+
+        &__save{
+            font-size: 18px;
+            padding: 10px;
+            width: 35%;
+        }
+    }
+}
+
+@media screen and (max-width: 768px){
+    .account{
+        &__save{
+            width: 40%;
+        }
+
+        &__order-price{
+            margin-top: 20px;
+        }
+    }
+}
+
+@media screen and (max-width: 678px){
+    .account{
+        &__menu{
+            width: 40%;
+        }
+
+        &__link{
+            font-size: 16px;
+        }
+
+        &__item{
+            width: 100%;
+            margin-top: 0;
+            &-flex{
+                display: block;
+
+                div{
+                    margin-top: 30px;
+                    width: 100%;
+                }
+            }
+
+            label{
+                font-size: 16px;
+            }
+        }
+
+        &__input{
+            width: 70%;
+        }
+
+        &__save{
+            width: 60%;
+            font-size: 16px;
+        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    .account{
+        &__menu{
+            width: 45%;
+        }
+
+        &__input{
+            width: 90%;
+        }
+    }
+}
+
+@media screen and (max-width: 500px){
+    .account{
+        &__wrapper{
+            display: block;
+            padding-top: 10px;
+        }
+
+        &__menu{
+            width: 100%;
+            padding: 15px 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-radius: 10px
+        }
+
+        &__link{
+            width: auto;
+            margin-bottom: 0;
+            text-transform: lowercase;
+        }
+        &__data{
+            width: 100%;
+            padding: 50px 0 100px 0;
+        }
+    }
+}
